# ai-defender

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  fly.toml  next.config.ts  package-lock.json  package.json  vitest.config.ts
app/: layout.tsx  page.tsx
backend/: .dockerignore  fly.toml  pyproject.toml  requirements.txt
backend/honeypot/: Dockerfile  api.py  app.py  engagement.py  protocol.py  registry.py  session.py  tokens.py
backend/honeypot/simulators/: aws_cli.py  base.py  browser.py  dns_lookup.py  docker_registry.py  file_read.py  kubectl.py  nmap.py  shell_exec.py  sqlmap.py  vault_cli.py
backend/honeypot/simulators/templates/: db_schema.sql  env_file.txt  etc_passwd.txt  nmap_output.xml
backend/honeypot/simulators/templates/html_pages/: admin_dashboard.html  login.html
backend/shared/: config.py  db.py  event_bus.py  validators.py
backend/tests/: conftest.py  test_api.py  test_db_extras.py  test_engagement.py  test_integration.py  test_protocol.py  test_registry.py  test_session.py  test_session_concurrency.py  test_simulators_negative.py  test_tokens.py
backend/tests/test_simulators/: test_aws_cli.py  test_browser.py  test_dns_lookup.py  test_docker_registry.py  test_file_read.py  test_kubectl.py  test_nmap.py  test_shell_exec.py  test_sqlmap.py  test_vault_cli.py
components/: bar-indicator.tsx  connection-status.tsx  escalation-badge.tsx  masked-value.tsx  providers.tsx  relative-time.tsx  sidebar.tsx  stat-card.tsx  (+1 more)
lib/: api.ts  (+7 more)
(+47 files in other folders)
